fixed: width overflow

--- a/css/master.css
+++ b/css/master.css
@@ -48,12 +48,13 @@
     padding: 5px;
 }
 #frame2{
-    /* height: 100vh;
-    width: 100%; */
+    height: 75vh;
+    min-width: 700px;
+    /* width: 100%;  */
     color:  rgb(2,0,36);
     text-align: center;
     padding: 10px;
-    margin: 40px;
+    /* margin: 40px; */
 }
 #frame2> .container >.text{
     margin-left: 30px;
